--- a/static/prod/personal.html
+++ b/static/prod/personal.html
@@ -22,7 +22,7 @@
         <link href="assets/css/separate-css/slick.css" rel="stylesheet" type="text/css">
         <link href="assets/css/separate-css/slick-theme.css" rel="stylesheet" type="text/css">
         <link href="assets/css/separate-css/nouislider.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/mainchsgbd.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/mainhpr1c4.min.css" rel="stylesheet" type="text/css">
         <script>
             (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
         </script>
@@ -463,12 +463,12 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="header__auth">
-                        <a class="header__auth-button header__auth-button_enter" href="#">
+                    <div class="header__auth header__auth_authorised">
+                        <a class="header__auth-button" href="#">
                             <svg class="header__auth-icon" width="19" height="19">
                                 <use xlink:href="#person-icon"></use>
                             </svg>
-                            Войти</a><a class="header__auth-sep">или  </a><a class="header__auth-button" href="#">зарегистрироваться</a>
+                            Alex</a><a class="header__auth-sep">или  </a><a class="header__auth-button header__auth-button_enter" href="#">Выйти</a>
                     </div>
                 </div>
             </div>
@@ -816,7 +816,7 @@
         <script src="assets/js/separate-js/slick.min.js"></script>
         <script src="assets/js/separate-js/wNumb.min.js"></script>
         <script src="assets/js/separate-js/nouislider.min.js"></script>
-        <script src="assets/js/mainchsgbd.min.js"></script>
+        <script src="assets/js/mainhpr1c4.min.js"></script>
     </body>
 
 </html>
