--- a/static/prod/index.html
+++ b/static/prod/index.html
@@ -22,7 +22,7 @@
         <link href="assets/css/separate-css/slick.css" rel="stylesheet" type="text/css">
         <link href="assets/css/separate-css/slick-theme.css" rel="stylesheet" type="text/css">
         <link href="assets/css/separate-css/nouislider.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/mainchsgbd.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/mainhpr1c4.min.css" rel="stylesheet" type="text/css">
         <script>
             (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
         </script>
@@ -1159,7 +1159,7 @@
         <script src="assets/js/separate-js/lazyload.min.js"></script>
         <script src="assets/js/separate-js/jquery.min.js"></script>
         <script src="assets/js/separate-js/slick.min.js"></script>
-        <script src="assets/js/mainchsgbd.min.js"></script>
+        <script src="assets/js/mainhpr1c4.min.js"></script>
     </body>
 
 </html>
